Created git ignore and put the application env , bug fix